Add generic search endpoint
